# spectral-prism

./: .gitignore  .prettierignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAP-ANALYSIS.md  NOTICE  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  SPEC.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts  vitest.parity.config.ts
.claude/: settings.json
.claude/agents/: design-reviewer.md  spec-auditor.md
.claude/skills/phase-gate/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
docs/: capability-tiers.md
docs/adr/: 0001-zarr-geozarr-native-format.md  0002-zarrita-icechunk-js-access.md  0003-dual-chunk-layout.md  0004-webgpu-compute-webgl2-render.md  0005-mosaic-duckdb-coordination.md  0006-prism-core-package-split.md  0007-display-projection-model.md  0008-numerical-policy.md
docs/autonomy/: AUTONOMY-PLAN.md  ESCALATION.md  GATE-REPORT-P0.md  STATE.md
docs/design/: DESIGN-BRIEF.md
docs/research/: geozarr-vocabulary.md  icechunk-js-posture.md  name-collision-scan.md  zep0005-stats-posture.md
docs/reviews/: spec-review-v0.1.md  spec-review-v0.2.md  spec-review-v0.3.md  spec-review-v0.4-users.md
e2e/: smoke.spec.ts
tools/spectral-prism-py/: README.md  pyproject.toml
tools/spectral-prism-py/scripts/: generate_icechunk_fixtures.py  generate_perf_store.py  generate_store_fixtures.py
tools/spectral-prism-py/src/sprism/: __init__.py  cli.py
